updated to last mx release

--- a/stm32h7rs_ospi.ioc
+++ b/stm32h7rs_ospi.ioc
@@ -5,18 +5,13 @@ Boot.IPs=CORTEX_M7_BOOT\:I,GPDMA1,HPDMA1,LINKEDLIST,RCC,GPIO,NVIC1\:I,XSPI1,SBS,
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7_APPLI.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_FULL_ACCESS
-CORTEX_M7_APPLI.BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=0x90000000
-CORTEX_M7_APPLI.Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_ENABLE
-CORTEX_M7_APPLI.IPParameters=default_mode_Activation
-CORTEX_M7_APPLI.IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_BUFFERABLE
-CORTEX_M7_APPLI.IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_CACHEABLE
-CORTEX_M7_APPLI.Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_SIZE_32MB
+CORTEX_M7_APPLI.IPParameters=default_mode_Activation,MPU_Control
+CORTEX_M7_APPLI.MPU_Control=__NULL
 CORTEX_M7_APPLI.default_mode_Activation=1
 CORTEX_M7_BOOT.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_FULL_ACCESS
 CORTEX_M7_BOOT.BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=0x90000000
 CORTEX_M7_BOOT.Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_ENABLE
-CORTEX_M7_BOOT.IPParameters=default_mode_Activation
+CORTEX_M7_BOOT.IPParameters=default_mode_Activation,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S
 CORTEX_M7_BOOT.IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_BUFFERABLE
 CORTEX_M7_BOOT.IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_CACHEABLE
 CORTEX_M7_BOOT.Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_SIZE_32MB
@@ -27,7 +22,7 @@ EXTMEM_LOADER.RefParam_SECTORS_SIZE=4096
 EXTMEM_MANAGER.IPParameters=RefParam_BOOT_enable,RefParam_MEMORY_1_ConfigType
 EXTMEM_MANAGER.RefParam_BOOT_enable=true
 EXTMEM_MANAGER.RefParam_MEMORY_1_ConfigType=EXTMEM_LINK_CONFIG_8LINES
-ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO\:I,XSPI1,SBS
+ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO,XSPI1,SBS
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -69,8 +64,8 @@ Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7S3L8Hx
-MxCube.Version=6.11.0
-MxDb.Version=DB.6.0.110
+MxCube.Version=6.11.1
+MxDb.Version=DB.6.0.111
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.ForceEnableDMAVector=true
@@ -207,7 +202,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,3-MX_SBS_Init-SBS-false-HAL-true-Boot,4-MX_XSPI1_Init-XSPI1-false-HAL-true-Boot,5-MX_EXTMEM_MANAGER_Init-EXTMEM_MANAGER-false-HAL-false-Boot,1-SystemClock_Config-RCC-false-HAL-false-Appli,0-MX_CORTEX_M7_BOOT_Init-CORTEX_M7_BOOT-false-HAL-true-Boot,0-MX_CORTEX_M7_APPLI_Init-CORTEX_M7_APPLI-false-HAL-true-Appli,1-SystemClock_Config-RCC-false-HAL-false-ExtMemLoader,2-MX_GPIO_Init-GPIO-false-HAL-true-ExtMemLoader,3-MX_SBS_Init-SBS-false-HAL-true-ExtMemLoader,4-MX_XSPI1_Init-XSPI1-false-HAL-true-ExtMemLoader,5-MX_EXTMEM_LOADER_Init-EXTMEM_LOADER-false-HAL-false-ExtMemLoader,6-MX_EXTMEM_MANAGER_Init-EXTMEM_MANAGER-false-HAL-false-ExtMemLoader
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,3-MX_SBS_Init-SBS-false-HAL-true-Boot,4-MX_XSPI1_Init-XSPI1-false-HAL-true-Boot,5-MX_EXTMEM_MANAGER_Init-EXTMEM_MANAGER-false-HAL-false-Boot,1-SystemClock_Config-RCC-false-HAL-false-Appli,2-MX_GPIO_Init-GPIO-false-HAL-true-Appli,0-MX_CORTEX_M7_BOOT_Init-CORTEX_M7_BOOT-false-HAL-true-Boot,0-MX_CORTEX_M7_APPLI_Init-CORTEX_M7_APPLI-false-HAL-true-Appli,1-SystemClock_Config-RCC-false-HAL-false-ExtMemLoader,2-MX_GPIO_Init-GPIO-false-HAL-true-ExtMemLoader,3-MX_SBS_Init-SBS-false-HAL-true-ExtMemLoader,4-MX_XSPI1_Init-XSPI1-false-HAL-true-ExtMemLoader,5-MX_EXTMEM_LOADER_Init-EXTMEM_LOADER-false-HAL-false-ExtMemLoader,6-MX_EXTMEM_MANAGER_Init-EXTMEM_MANAGER-false-HAL-false-ExtMemLoader
 RCC.ADCFreq_Value=400000000
 RCC.ADFFreq_Value=300000000
 RCC.AHB1234Freq_Value=300000000
